<resources>
    <string name="app_name">Brain it on</string>
    <string name="username">Username</string>
    <string name="continues">Continue</string>
    <string name="brain_it_on">Brain it ON</string>
    <string name="guess_the_logical_riddle">Guess the logical riddle.</string>
    <string name="input_username_to_continue">Input Username to Continue</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="ranking">Leaderboard</string>
    <string name="shop">Shop</string>
    <string name="setting">Setting</string>
    <string name="badge_collection">Badge Collection</string>
    <string name="word_of_the_day">Word of the Day</string>
    <string name="current_coins">Current Coins:</string>
    <string name="sharp">#</string>
    <string name="total_earned_coins">Total Earned Coins:</string>
    <string name="my_badge_collection">My Badge Collection:</string>
    <string name="current_stage">Current Stage:</string>
    <string name="total_question_answered">Total Riddle Answered:</string>
    <string name="default_profile">Default</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="change_your_avatar">Change your avatar</string>
    <string name="background_music">Background Music</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="user_avatar">User Avatar</string>
    <string name="apply">Owned</string>
    <string name="selected">Selected</string>
    <string name="avatar_shop">Avatar Shop</string>
    <string name="most_riddle_answered">Top 10 User for Most Points Earned!</string>
    <string name="my_coins">My Coins:</string>
    <string name="badge_name">Badge Name</string>
    <string name="description">Description:</string>
    <string name="stage_01">Stage 1</string>
    <string name="stage_02">Stage 2</string>
    <string name="word">Word</string>
    <string name="descriptions">Descriptions</string>
    <string name="antonym">Antonym</string>
    <string name="synonym">Synonym</string>
    <string name="cleared">Cleared!</string>
    <string name="coins_earned">Coins Earned</string>
    <string name="next">Next</string>
    <string name="loading">Loading…</string>
    <string name="finish">Finish</string>
    <string name="question_counter">Question Counter</string>
    <string name="four_five_letters">3 – 5 Letters</string>
    <string name="six_seven_letters">6 – 9 Letters</string>
    <string name="eight_ten_letters">8 – 10 Letters</string>
    <string name="current_points">Current Points:</string>
    <string name="retry">Retry</string>
    <string name="failed">Failed!</string>
    <string name="clue">Clue</string>
</resources>