<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="center"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_card1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/dancing_script"
                android:text="@string/cleared"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewCoinsEarned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:hint="@string/coins_earned"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:fontFamily="@font/proxima_nova"
                android:textColorHint="@color/gray" />

            <TextView
                android:id="@+id/textViewCorrectWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:hint="@string/word"
                android:textAlignment="center"
                android:textColor="@color/mediumPurple"
                android:textColorHint="@color/gray"
                android:textSize="40sp"
                android:fontFamily="@font/fredoka_one" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/mediumPurple"
                android:elevation="56dp"
                android:padding="24sp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8sp"
                        android:text="@string/synonym"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:fontFamily="@font/proxima_nova"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/detail_translate_card_synonym"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/synonym"
                        android:textColor="@color/white_smoke"
                        android:fontFamily="@font/proxima_nova"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_nextStage"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_margin="20dp"
                android:background="@drawable/button_rounded"
                android:elevation="5dp"
                android:stateListAnimator="@null"
                android:text="@string/next"
                android:textColor="@color/white_smoke"
                android:textSize="12sp"
                android:translationZ="2dp"
                android:fontFamily="@font/proxima_nova"
                app:backgroundTint="@color/goldenrod"
                app:icon="@drawable/ic_next"
                app:iconGravity="end"
                app:iconSize="20dp"
                app:iconTint="@null" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>