<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".PlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="start"
                android:background="@drawable/ic_back"
                app:backgroundTint="@color/goldenrod" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/play"
                android:textAlignment="center"
                android:textColor="@color/white_smoke"
                android:textSize="28sp" />

            <Button
                android:id="@+id/coinButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@raw/coins"
                app:backgroundTint="@null" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/proxima_nova"
                    android:hint="@string/current_stage"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova"
                    android:hint="@string/question_counter"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_card1"
                    android:elevation="6dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova"
                        android:hint="@string/descriptions"
                        android:lineSpacingExtra="6dp"
                        android:textColor="#332FA2"
                        android:textColorHint="@color/gray"
                        android:textSize="18sp" />

                </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/text_background"
                    android:clickable="false"
                    android:elevation="6dp"
                    android:focusable="false"
                    android:fontFamily="@font/fredoka_one"
                    android:gravity="center"
                    android:letterSpacing="0.20"
                    android:padding="10dp"
                    android:textColor="@color/mediumPurple"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_reset"
                    app:backgroundTint="@color/goldenrod" />
            </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <HorizontalScrollView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:scrollbarThumbHorizontal="@color/white_smoke"
                        android:fitsSystemWindows="true">

                        <LinearLayout
                            android:id="@+id/layoutParent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        </LinearLayout>
                    </HorizontalScrollView>

                    <Button
                        android:id="@+id/shuffleButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/ic_shuffle"
                        app:backgroundTint="@color/goldenrod" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNextStage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:padding="20dp"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_card1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/dancing_script"
                    android:text="@string/cleared"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCoinsEarned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/proxima_nova"
                    android:hint="@string/coins_earned"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

                <TextView
                    android:id="@+id/textViewCorrectWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/fredoka_one"
                    android:hint="@string/word"
                    android:textAlignment="center"
                    android:textColor="@color/mediumPurple"
                    android:textColorHint="@color/gray"
                    android:textSize="40sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@color/mediumPurple"
                    android:elevation="56dp"
                    android:padding="24sp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8sp"
                            android:fontFamily="@font/proxima_nova"
                            android:text="@string/synonym"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/detail_translate_card_synonym"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/proxima_nova"
                            android:hint="@string/synonym"
                            android:textColor="@color/white_smoke"
                            android:textSize="14sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_nextStage"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_rounded"
                    android:elevation="5dp"
                    android:fontFamily="@font/proxima_nova"
                    android:stateListAnimator="@null"
                    android:text="@string/next"
                    android:textColor="@color/white_smoke"
                    android:textSize="12sp"
                    android:translationZ="2dp"
                    app:backgroundTint="@color/goldenrod"
                    app:icon="@drawable/ic_next"
                    app:iconGravity="end"
                    app:iconSize="20dp"
                    app:iconTint="@null" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>